--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <h3>●小町（KOMACHI・♀）</h3>
-    ［相片］
+    <img src="img/komachi.jpg" alt="">
     <p>出生不到2個月就到家的貓姐姐。
         從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。
     </p>
@@ -31,7 +31,7 @@
 
 
     <h3>●小夏（KONATSU・♀）</h3>
-    ［相片］
+    <img src="img/konatsu.jpg" alt="">
     <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
         原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。
     </p>
@@ -39,7 +39,7 @@
 
 
     <h2>飼主介紹</h2>
-    ［大頭照］
+    <img src="img/avatar.png" alt="">
     <dl>
        <dt>暱稱 ：</dt><dd>roka404</dd>
        <dt>職業 ：</dt><dd>Web相關工作的SOHO族</dd>
@@ -49,6 +49,6 @@
 
 
     <p>Copyright © KOMA-NATSU Web All Rights Reserved.</p>
-    
+
 </body>
 </html>
