--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的個人介紹</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Jack的個人履歷</h1>
@@ -14,6 +15,7 @@
       <li><a href="inline.html">行內樣式表</a></li>
       <li><a href="internal.html">內部樣式表</a></li>
       <li><a href="external.html">外部樣式表</a></li>
+      <li><a href="css_basic.html">基本樣式表</a></li>
   </ul> 
 </body>
 </html>
