--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>你的名字的個人履㱘</title>
         <link rel="shortcut icon" href="img/konatsu.jpg" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
     </head>
     <style>
         #container{
