--- a/個人網頁.html
+++ b/個人網頁.html
@@ -67,7 +67,7 @@
             
             
             <h3 style="font-size: 30px;">出去玩</h3>
-            <p style="font-size: 25px;">徂我小時候開始，我們家每個禮拜六或日會找一天出去玩，所以我從小就喜歡道出趴趴走，但最近幾年因為疫情的關係
+            <p style="font-size: 25px;">從我小時候開始，我們家每個禮拜六或日會找一天出去玩，所以我從小就喜歡道出趴趴走，但最近幾年因為疫情的關係
                                             ，使得沒有辦法像以前那樣想去哪就去哪了，希望疫情早日趨緩。</p><br><hr color="#00000">
             <p class="more clear">
     <section id="license">
