--- a/個人網頁.html
+++ b/個人網頁.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="個人網頁.css">
 </head>
 <body>
+    <menu>
     <ul>
         <li><a href="#Self introduction">自我介紹</li></a>
         <li><a href="#Education">學歷</li></a>
         <li><a href="#interest">興趣</li></a>
         <li><a href="#license">證照</li></a>
-    </ul>
+    </ul></menu>
     <nav>
         <br>
         <img src="img/110111228.jpg" alt="這是我" width="280" height="360">
