--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <ul>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="resume.html">關於我</a></li>
+        <li><a href="http://www.aeust.edu.tw" target="_blank">亞東科大</a></li>
+        <li><a href="mailto:110111228@mail.aeust.edu.tw">聯絡我們</a></li>
+    </ul>
+</nav>
   <h1>Jack的個人履歷</h1>
   <h2>作品集</h2> 
   <ul>
