--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="external.html">外部樣式表</a></li>
       <li><a href="css_basic.html">基本樣式表</a></li>
       <li><a href="個人網頁.html">期中報告</a></li>
+      <li><a href="nestedNav.html">期中報告</a></li>
   </ul> 
 </body>
 </html>
