--- a/個人網頁.html
+++ b/個人網頁.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="個人網頁.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">首頁</a></li>
+            <li><a href="resume.html">關於我</a></li>
+            <li><a href="http://www.aeust.edu.tw" target="_blank">亞東科大</a></li>
+            <li><a href="mailto:110111228@mail.aeust.edu.tw">聯絡我們</a></li>
+            <li><a href="nestedNav.html">作品集</a></li>
+            <li><a href="fioat.html">floot排版</a></li>
+        </ul>
+    </nav>
     <menu>
     <ul>
         <li><a href="#Self introduction">自我介紹</li></a>
