--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li><a href="css_basic.html">基本樣式表</a></li>
       <li><a href="個人網頁.html">期中報告</a></li>
       <li><a href="nestedNav.html">期中報告</a></li>
-      <li><a href="flexbox/flex.html>flexbox練習</a></li>
+      <li><a href="flexbox/flexbox.html>flexbox練習</a></li>
   </ul> 
 </body>
 </html>
